--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "next": "12.1.5",
     "next-auth": "^4.3.4",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-toastify": "^9.0.3"
   },
   "devDependencies": {
     "@types/node": "17.0.30",
